--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,17 @@
 * {
   margin: 0;
-  padding: 0.25rem; 
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
+.all_unset {
+  all: unset;
+}
+
+/*
 body {
-  background-color: #333;
-  color: whitesmoke; 
+  background-color: whitesmoke;
+  color: black; 
   display: grid; 
   place-content: center;
   font-size: 150%;
@@ -22,4 +27,4 @@ button {
 
 .gold {
   color: gold;
-}
+}*/
